--- a/src/styles/paginate.scss
+++ b/src/styles/paginate.scss
@@ -5,26 +5,20 @@
   }
   @keyframes ripple {
     0% {
-      box-shadow: 0 0 0 0 rgba(184, 226, 250, 0.733),
-        0 0 0 0.1em rgba(184, 226, 250, 0.733),
-        0 0 0 0.2em rgba(184, 226, 250, 0.733),
-        0 0 0 0.3em rgba(184, 226, 250, 0.733);
+      box-shadow: 0 0 0 0 rgba(184, 226, 250, 0.733), 0 0 0 0.1em rgba(184, 226, 250, 0.733),
+        0 0 0 0.2em rgba(184, 226, 250, 0.733), 0 0 0 0.3em rgba(184, 226, 250, 0.733);
     }
     100% {
-      box-shadow: 0 0 0 0.1em rgba(184, 226, 250, 0.733),
-        0 0 0 0.2em rgba(184, 226, 250, 0.733),
+      box-shadow: 0 0 0 0.1em rgba(184, 226, 250, 0.733), 0 0 0 0.2em rgba(184, 226, 250, 0.733),
         0 0 0 0.4em rgba(184, 226, 250, 0);
     }
   }
 }
-
 .pagenate {
   margin: 0 0 0 10px;
-
   &.ml0 {
     margin-left: 0;
   }
-
   ul {
     margin: 0;
     padding: 0;
