--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -179,6 +179,9 @@ span {
   &.height-20 {
     height: 20px;
   }
+  &.height-50 {
+    height: 50px;
+  }
   &.height-100 {
     height: 100px;
   }
@@ -202,6 +205,9 @@ span {
   }
   &.width-100 {
     width: 100px;
+  }
+  &.width-400 {
+    width: 400px;
   }
 }
 div,
@@ -339,6 +345,9 @@ button {
   }
   &.vertical-text-bottom {
     vertical-align: text-bottom;
+  }
+  &.border-box {
+    box-sizing: border-box;
   }
 }
 // flex
